# yolo-sam2

./: README.md  run_pipeline.py
sam2/: CMakeLists.txt  package.xml
sam2/scripts/: sam2_ros.py  sam2_ros2.py  sam2_ros_test.py  sam_bigsure.py
yolov9/: CMakeLists.txt  detect.py  onemsg.pkl  package.xml  train_dual.py  yolov9_ros_node.py
yolov9/datasets/data1/: README.dataset.txt  README.roboflow.txt  data.yaml
yolov9/datasets/data1/train/: labels.cache
yolov9/datasets/data1/valid/: labels.cache
yolov9/datasets/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
yolov9/datasets/dataset/train/: labels.cache
yolov9/datasets/dataset/valid/: labels.cache
yolov9/datasets/detect holes 1.v2i.yolov9/: README.dataset.txt  README.roboflow.txt  data.yaml
yolov9/datasets/detect holes 1.v2i.yolov9/train/: labels.cache
yolov9/datasets/detect holes 1.v2i.yolov9/valid/: labels.cache
yolov9/datasets/eclatorq.v5i.yolov9/: README.dataset.txt  README.roboflow.txt  data.yaml
yolov9/launch/: yolov9_camera_2.launch
yolov9/models/: experimental.py
yolov9/msg/: BoundingBox.msg
yolov9/runs/train-seg/exp/: events.out.tfevents.1745944832.a519.620470.0  opt.yaml
yolov9/runs/train-seg/exp2/: events.out.tfevents.1745946785.a519.714043.0  opt.yaml
yolov9/runs/train-seg/exp3seg/: opt.yaml  results.csv
yolov9/runs/train/exp/: events.out.tfevents.1745834444.a519.11960.0  opt.yaml
yolov9/runs/train/exp2/: events.out.tfevents.1745834531.a519.12269.0  opt.yaml
yolov9/runs/train/exp3/: events.out.tfevents.1745834606.a519.12864.0  opt.yaml
yolov9/runs/train/exp4/: events.out.tfevents.1745834731.a519.13503.0  opt.yaml
yolov9/runs/train/exp5/: events.out.tfevents.1745834886.a519.14112.0  opt.yaml
yolov9/runs/train/exp6/: events.out.tfevents.1745834928.a519.14682.0  opt.yaml  results.csv
yolov9/scripts/: detect_ros.py  detect_ros2.py  detect_ros_double.py  detect_ros_test.py  yolov9_node.sh
yolov9/segment/: predict.py  train_dual.py
yolov9/utils/: general.py
(+5885 files in other folders)
