<?xml version="1.0"?>
<package format="2">
  <name>yolov9_ros</name>
  <version>0.0.1</version>
  <description>YOLOv9 detection integrated with ROS</description>

  <maintainer email="baiwenbin6@163.com">Bwb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
